--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
     <name>burger-test-freier-Tag</name>
     <description>burger-test-freier-Tag</description>
     <properties>
+            <sonar.organization>dstadge</sonar.organization>
+            <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <java.version>17</java.version>
     </properties>
     <dependencies>
@@ -21,14 +23,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
@@ -37,5 +37,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
